# flowly-flv

./: Cargo.toml  README.md
examples/: demo.rs
src/: error.rs  fourcc.rs  header.rs  lib.rs  parser.rs  reader.rs  tag.rs
src/parser/: tag.rs
src/parser/tag/: audio.rs  ex_data.rs  meta.rs  video.rs
src/serde/: meta.rs  mod.rs
src/serde/meta/: de.rs  de_ref.rs  ser.rs
src/tag/: audio.rs  meta.rs  video.rs
src/tag/video/: mpeg4_avc.rs
