[package]
name = "flowly-flv"
version = "0.1.0"
edition = "2024"
description = "FLV format streaming parser"
keywords = ["flv", "parser", "async", "demuxer", "amf"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
async-stream = "0.3"
bytes = "1"
futures = "0.3"
log = "0.4.27"
serde = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1.45", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
