[package]
name = "flowly-flv"
version = "0.1.1"
edition = "2024"
description = "FLV format streaming parser"
keywords = ["flv", "parser", "async", "demuxer", "amf"]
categories = ["asynchronous", "multimedia", "parser-implementations"]
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flowly-team/flowly-flv"
homepage = "https://github.com/flowly-team/flowly-flv"
 
[features]
default = []
serde = ["dep:serde"]

[dependencies]
flowly = "0.2"
async-stream = "0.3"
bytes = "1"
futures = "0.3"
log = "0.4.27"
serde = { version = "1", optional = true }
thiserror = "2"
tokio = { version = "1.45", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
smallvec = "1.15.1"

[dev-dependencies]
tokio = { version = "1.45", features = ["full"] }
